# cointracker

./: .env.example  .gitignore  LICENSE  Procfile  README.md  manage.py  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: django.yml  pylint.yml
accounts/: forms.py  views.py
backend/: db.sqlite3
backend/backend/: settings.py
backend/cointracker/: db.sqlite3
backend/cointracker/accounts/: views.py
backend/cointracker/cointracker/: settings.py  urls.py  views.py  wsgi.py
backend/cointracker/portfolios/: __init__.py  forms.py  models.py  serializers.py  views.py
backend/cointracker/services/: btc.py  crypto_price.py
cointracker/: Procfile  settings.py  urls.py  views.py  wsgi.py
cointracker/accounts/: forms.py  urls.py  views.py
cointracker/cointracker/: asgi.py  settings.py  urls.py  views.py
cointracker/portfolios/: admin.py  apps.py  forms.py  models.py  signals.py  views.py
cointracker/services/: balance.py  crypto_price.py
cointracker/static/css/: ws.css  (+1 more)
cointracker/templates/: 404.html  about.html  base.html  donate.html  footer.html  index.html  portfolio.html  prices.html  ranking.html  sign-up.html  tab.html
cointracker/templatetags/: static_hash.py
portfolios/: __init__.py  admin.py  apps.py  models.py  serializers.py  tasks.py  views.py
services/: balance.py  crypto_price.py  download_crypto_images.py
static/css/: style.css
static/js/: portfolio.js
templates/: 404.html  base.html  footer.html  modal.html  navbar.html  portfolio.html  prices.html  ranking.html  settings.html  transactions.html
(+33 files in other folders)
